--- a/fm/templates/fm/modal.html
+++ b/fm/templates/fm/modal.html
@@ -32,7 +32,7 @@
                                   </button>
                                 </div>
                                 <div class="col-xs-6">
-                                 <button class="btn pull-right blue" id="Aceptar" type="submit">{% trans 'Aceptar' %}</button>
+                                 <button class="btn pull-right blue-steel" id="Aceptar" type="submit">{% trans 'Aceptar' %}</button>
                                 </div>
                               
                               </div>
