--- a/templates/egresos/compras/cpb_compra_listado.html
+++ b/templates/egresos/compras/cpb_compra_listado.html
@@ -28,7 +28,9 @@
                     {% include "general/varios/barra_busqueda_compras.html" %}
                     <div class="btn-group" style="float:left;margin-right:20px;margin-bottom:10px;"> 
                     <a class="btn btn-sm blue-steel" style="float:left;margin-right:10px;" href="{% url 'cpb_compra_nuevo' %}">Nueva Compra</a>
+                    {% if 'cpb_compras_pagar' in permisos_grupo %}
                     <button class="btn btn-sm blue-steel" id="btnPago" style="float:left;margin-right:10px;" >Pagar</button>                                                           
+                    {% endif %}
                     <button class="btn btn-sm red-flamingo" value="" style="margin-right:10px;"  id="btnAnular">Anular</button>
 
                     <button class="btn btn-sm blue-steel" value="" id="btnImprimirDetalles">Listado Detalles</button>                                       
@@ -80,10 +82,11 @@
                                                 
                                                 <li><a href="#" 
                                                 onClick="alerta= alertify.dialog('confirm').set({'labels':{ok:'Aceptar', cancel:'Cancelar'},'message': '¿DESEA ANULAR EL COMPROBANTE ACTUAL?',transition:'fade','onok': function(){ window.location.href = '{% url 'cpb_anular_reactivar' id=cpb.pk estado=3  %}'; },'oncancel': function(){ return true;} }); alerta.setting('modal', true); alerta.setHeader('ANULAR/REACTIVAR COMPROBANTE'); alerta.show(); return true;" ><i class="icon-dislike"></i>Anular</a></li>
-                                                
+                                               {% if 'cpb_compras_pagar' in permisos_grupo %} 
                                                 {% if cpb.saldo > 0 %}
                                                 <li><a onclick="return abrir_modal('/egresos/pagos/comprobantes/?id_cpb={{cpb.id|safe}}');"><i class=" icon-note"></i>Orden de Pago</a></li>
                                                 {% endif %}
+                                               {% endif %} 
                                                 
                                                                                             
                                             {% endif %}
