--- a/templates/productos/producto_stock.html
+++ b/templates/productos/producto_stock.html
@@ -38,7 +38,7 @@
         <thead>
             <tr>                                                               
                 <th class="no-sort text-center"></th>
-                <th class="no-sort text-center"></th>
+                <th class="no-sort text-center"><input type="checkbox" id="checkall" title="Seleccionar Todas"/></th>
                 <th class="">Producto</th>                                                                
                 <th>Categoría</th>
                 <th>TipoProd.</th>
