--- a/templates/menues.html
+++ b/templates/menues.html
@@ -32,8 +32,7 @@
                         <a class="acceso_menu" href="{% url 'cpb_venta_nuevo' %}">+</a>
                       </li>
                       <li>                         
-                        <a class="left" href="{% url 'cpb_liqprod_nuevo' %}"><i class="icon-note"></i>Comprobantes Liq.Prod.</a>
-                        <a class="acceso_menu" href="{% url 'cpb_liqprod_nuevo' %}">+</a>
+                        <a class="left" href="{% url 'cpb_liqprod_nuevo' %}"><i class="icon-note"></i>Nuevo CPB Liq.Prod.</a>                        
                       </li>
                       {% endif %}
                       {% if 'cpb_cobranzas' in permisos_grupo %}
