--- a/templates/menues.html
+++ b/templates/menues.html
@@ -34,7 +34,7 @@
                         {% endif %}
                       </li>
                       {% endif %}
-                      {% if 'cpb_ventas_abm' in permisos_grupo %}
+                      {% if 'cpb_liqprod_abm' in permisos_grupo %}
                       <li>                         
                         <a class="left" href="{% url 'cpb_liqprod_nuevo' %}"><i class="icon-note"></i>Nuevo CPB Liq.Prod.</a>                        
                       </li>
