--- a/templates/ultimos_cpbs.html
+++ b/templates/ultimos_cpbs.html
@@ -41,7 +41,7 @@
                                     {% for cpb in ultimas_ventas %}
                                     <tr>   
                                         <td class="text-center">{% include "general/varios/cpb_ver.html" %} </td>
-                                        <td class="listado_estado {{cpb.estado.color}}">{{cpb.estado}}</td>
+                                        <td class="listado_estado {{cpb.estado_color}}">{{cpb.estado}}</td>
                                         <td {% if cpb.cae %}title="Nº CAE: {{cpb.cae}} Vencimiento: {{cpb.cae_vto|date:'d/m/Y'}}"{% endif %} class="text-center">{% if cpb.cae %}<a target="_blank" href="{% url 'imprimirFactura' id=cpb.pk %}"><strong><i class="glyphicon glyphicon-paperclip text-primary"></strong></a>{% endif %}</td>
                                         <td class="text-center">{{cpb.fecha_cpb|date:'d/m/Y'}}</td>
                                         <td class="text-center" title="{{ cpb.cpb_tipo|default_if_none:'' }}"><strong>{{ cpb.cpb_tipo.codigo|default_if_none:'' }}</strong></td>
@@ -80,7 +80,7 @@
                                     {% for cpb in ultimas_compras %}
                                     <tr>
                                         <td class="text-center">{% include "general/varios/cpb_ver.html" %}</td>
-                                        <td class="listado_estado {{cpb.estado.color}}">{{cpb.estado}}</td>
+                                        <td class="listado_estado {{cpb.estado_color}}">{{cpb.estado}}</td>
                                         <td class="text-center">{{cpb.fecha_cpb|date:'d/m/Y'}}</td>
                                         <td class="text-center" title="{{ cpb.cpb_tipo|default_if_none:'' }}"><strong>{{ cpb.cpb_tipo.codigo|default_if_none:'' }}</strong></td>
                                         <td>{{ cpb}}</td>                                
@@ -118,7 +118,7 @@
                                     {% for cpb in ultimos_presup %}
                                     <tr>
                                         <td class="text-center">{% include "general/varios/cpb_ver.html" %}</td>
-                                        <td class="listado_estado {{cpb.estado_cpb.color}}">{{cpb.estado_cpb}}</td>
+                                        <td class="listado_estado {{cpb.estado_color}}">{{cpb.estado_cpb}}</td>
                                         <td class="listado_estado {{cpb.presup_aprobacion.color}}">{{cpb.presup_aprobacion|default_if_none:''}}</td>
                                         <td class="text-center">{{cpb.fecha_cpb|date:'d/m/Y'}}</td>
                                         <td class="text-center">{{cpb.fecha_vto|date:'d/m/Y'}}</td>                                        
